--- a/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/_variables.scss
+++ b/catalog/view/theme/d_visualize/stylesheet/template/default/skin/opencart/base/_variables.scss
@@ -1,2 +1,36 @@
 $headings: h1, h2, h3, h4, h5, h6;
-$header_cart-bgc:#363636;
+$header_cart-bgc: #363636;
+%btn_default {
+  color: #777;
+  border: var(--border-default);
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  background-color: #e7e7e7;
+  background-image: linear-gradient(to bottom, #eeeeee, #dddddd);
+  background-repeat: repeat-x;
+  border-color: #dddddd #dddddd #b3b3b3 #b7b7b7;
+  /*&:hover,&.active {
+      background: var(--color-default-darken);
+      border-color: var(--color-default-darkenx2);
+    }
+    &:focus:active{
+      background: var(--color-default-darkenx2);
+      border-color: var(--color-default-darkenx2);
+      outline: none;
+    }*/
+}
+
+%btn_primary {
+  color: #ffffff;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #229ac8;
+  background-image: linear-gradient(to bottom, #23a1d1, #1f90bb);
+  background-repeat: repeat-x;
+  border: 1px solid transparent;
+  border-color: #1f90bb #1f90bb #145e7a;
+
+  * &:hover, &.active {
+    background-color: #1f90bb;
+    background-position: 0 -15px;
+    border: 1px solid #204d74;
+  }
+}
