--- a/catalog/view/theme/d_visualize/template/component/d_product_sort/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_sort/default.twig
@@ -1,19 +1,23 @@
 <!-- > d_product_sort -->
-<div class="vz-d_product_sort vz-d_product_sort_default">
+<div class="vz-product_sort vz-product_sort_default">
     <div class="row align-items-start justify-content-between">
-        <div class="col-md-4">
-            <div class="vz-d_product_sort__view-type">
-                <div class="btn vz-button vz-button-group vz-button-view">
-                    <button type="button" id="grid-view" class="btn vz-button active" data-toggle="tooltip"
-                            title="{{ button_grid }}"><i
-                                class="fas fa-th"></i></button>
+        <div class="col-lg-2 col-md-6">
+            <div class="vz-product_sort__view-type">
+                <div class="vz-button-group btn-group vz-button-view">
                     <button type="button" id="list-view" class="btn vz-button" data-toggle="tooltip"
                             title="{{ button_list }}"><i
                                 class="fas fa-th-list "></i></button>
+                    <button type="button" id="grid-view" class="btn vz-button active" data-toggle="tooltip"
+                            title="{{ button_grid }}"><i
+                                class="fas fa-th"></i></button>
+
                 </div>
             </div>
         </div>
-        <div class="col-md-5 text-right">
+        <div class="col-lg-3 col-md-6 col-12">
+            <a href="{{ compare }}" id="compare-total" class="btn vz-button btn-link vz-d_product_sort__compare">{{ text_compare }}</a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-6 text-right">
             {% include partial.input.template with partial.input|merge({
                 type:'select',
                 id:'input-sort',
@@ -25,9 +29,10 @@
                 on_change: 'location = this.value;',
                 text_input: text_sort,
                 classes: 'd-inline-block',
+                size: 'sm',
             }) %}
         </div>
-        <div class="col-md-3 text-right">
+        <div class="col-lg-3 col-md-6 col-6 text-right">
             {% include partial.input.template with partial.input|merge({
                 type:'select',
                 id:'input-limit',
@@ -39,6 +44,7 @@
                 on_change: 'location = this.value;',
                 text_input: text_limit,
                 classes: 'd-inline-block',
+                size: 'sm',
             }) %}
         </div>
     </div>
