--- a/catalog/view/theme/d_visualize/template/component/d_product_sort/hydrus.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_product_sort/hydrus.twig
@@ -1,8 +1,8 @@
-<!-- > d_product_sort -->
-<div class="vz-d_product_sort vz-d_product_sort_hydrus">
+<!-- product_sort -->
+<div class="vz-product_sort vz-product_sort_hydrus">
     <div class="row align-items-center justify-content-between no-gutters">
         <div class="col-md-2 col-sm-6 hidden-xs">
-            <div class="vz-d_product_sort__view-type">
+            <div class="vz-product_sort__view-type">
                 <div class="btn vz-button vz-button-group vz-button-view">
                     <button type="button" id="grid-view" class="btn vz-button active" data-toggle="tooltip"
                             title="{{ button_grid }}"><i
@@ -14,7 +14,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-6 text-right">
-            <a href="{{ compare }}" id="compare-total" class="btn vz-button btn-link vz-d_product_sort__compare">{{ text_compare }}</a>
+            <a href="{{ compare }}" id="compare-total" class="btn vz-button btn-link vz-product_sort__compare">{{ text_compare }}</a>
         </div>
         <div class="col-md-4 col-xs-6 text-right">
             {% include partial.input.template with partial.input|merge({
@@ -46,4 +46,4 @@
         </div>
     </div>
 </div>
-<!-- /> d_product_sort -->
+<!-- product_sort -->
