--- a/catalog/view/theme/d_visualize/template/component/d_review/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_review/default.twig
@@ -1,61 +1,52 @@
-{% if review_status %}
-    <div class="tab-pane" id="tab-review">
-        <form class="form-horizontal" id="form-review">
-            <div id="review"></div>
-            <!-- Button trigger modal -->
-            {% if review_guest %}
-                <button type="button"  data-loading-text="{{ text_loading }}" class="btn d-vis btn-primary"
-                        data-toggle="modal" data-target="#write_review_modal">{{ text_write }}</button>
-                <!-- Modal -->
-                <div class="modal fade" id="write_review_modal" tabindex="-1" role="dialog" aria-labelledby="">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                            aria-hidden="true">&times;</span></button>
-                                <h2 class="modal-title">{{ text_write }}</h2>
-                            </div>
-                            <div class="modal-body">
-                                <div class="form-group required">
-                                    <div class="col-sm-12">
-                                        <label class="control-label" for="input-name">{{ entry_name }}</label>
-                                        <input type="text" name="name" value="{{ customer_name }}" id="input-name"
-                                               class="form-control"/>
-                                    </div>
-                                </div>
-                                <div class="form-group required">
-                                    <div class="col-sm-12">
-                                        <label class="control-label" for="input-review">{{ entry_review }}</label>
-                                        <textarea name="text" rows="5" id="input-review"
-                                                  class="form-control"></textarea>
-                                        <div class="help-block">{{ text_note }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="modal-footer d-flex justify-content-end align-items-center">
-                                <div class="review_rating_wrap">
-                                    {% include partial.d_rating.template with partial.d_rating %}
-                                </div>
-                                {{ captcha }}
-                                <div class="buttons clearfix">
-                                    <div class="pull-right">
-                                        {% include partial.button.template with partial.button|merge({
-                                        button: true,
-                                        id:'button-review',
-                                        style:'primary',
-                                        text_button:button_continue,
-                                        }) %}
-                                        {#<button type="button" id="button-review" data-loading-text="{{ text_loading }}"#}
-                                        {#class="btn btn-vis btn-primary">{{ button_continue }}</button>#}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {% else %}
+<form class="vz-review vz-review--default form-horizontal" id="form-review">
+    <div id="review"></div>
+    <h2>{{ text_write }}</h2>
+    {% if review_guest %}
+        {% include partial.form_group.template with partial.form_group|merge({
+            type:'text',
+            id:'input-name',
+            name:'name',
+            required:true,
+            value:customer_name,
+            text_input:entry_name ,
+            placeholder:'' ,
+        }) %}
+        {% include partial.form_group.template with partial.form_group|merge({
+            type:'textarea',
+            required:true,
+            id:'input-review',
+            name:'text',
+            value:'',
+            classes:'',
+            text_input:entry_review,
+        }) %}
+        <div class="help-block">{{ text_note }}</div>
 
-            {% endif %}
-        </form>
-    </div>
-{% endif %}
+        <div class="form-group required">
+            <div class="col-sm-12">
+                <label class="control-label">{{ entry_rating }}</label>
+                <div class="vz-review__rating">
+                    {{ entry_bad }}&nbsp;
+                    {% include partial.d_rating.template with partial.d_rating %}
+                    &nbsp;{{ entry_good }}
+                </div>
+                &nbsp;&nbsp;&nbsp;
+            </div>
+        </div>
+        {{ captcha }}
+        <div class="buttons clearfix">
+            <div class="pull-right">
+                {% include partial.button.template with partial.button|merge({
+                    id:'button-review',
+                    style:'primary',
+                    data_loading:text_loading,
+                    button:true,
+                    text_button: button_continue
+                }) %}
+
+            </div>
+        </div>
+    {% else %}
+        {{ text_login }}
+    {% endif %}
+</form>
