--- a/catalog/view/theme/d_visualize/template/component/product_category/opencart.twig
+++ b/catalog/view/theme/d_visualize/template/component/product_category/opencart.twig
@@ -1,5 +1,5 @@
 <div id="product-category" class="vz-product_category vz-product_category_opencart">
-<h1 class="heading-h1 vz-product_category__heading">{{ heading_title }}</h1>
+<h2 class="heading-h2 vz-product_category__heading">{{ heading_title }}</h2>
     <div class="vz-product_category__description">
         {% if thumb or description %}
             <div class="row"> {% if thumb %}
@@ -7,28 +7,36 @@
                 {% endif %}
                 {% if description %}
                     <div class="col-sm-10">{{ description }}</div>
-                {% endif %}
-            </div>
+                {% endif %}</div>
             <hr>
+        {% endif %}
+        {% if categories %}
+            <h3>{{ text_refine }}</h3>
+            {% if categories|length <= 5 %}
+                <div class="row">
+                    <div class="col-sm-3">
+                        <ul>
+                            {% for category in categories %}
+                                <li><a href="{{ category.href }}">{{ category.name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            {% else %}
+                <div class="row">{% for category in categories|batch((categories|length / 4)|round(1, 'ceil')) %}
+                        <div class="col-sm-3">
+                            <ul>
+                                {% for child in category %}
+                                    <li><a href="{{ child.href }}">{{ child.name }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    {% endfor %}</div>
+                <br />
+            {% endif %}
         {% endif %}
     </div>
     {% include partial.d_product_list.template with  partial.d_product_list %}
-    {% if not categories %}
-        {% if not products %}
-            <p>{{ text_empty }}</p>
-            <div class="buttons">
-                <div class="pull-right">
-                    {% include partial.button.template with partial.button|merge({
-                        button: true,
-                        id:'button-cart',
-                        style:'secondary',
-                        text_button:button_cart,
-                        title:button_cart,
-                    }) %}
-                </div>
-            </div>
-        {% endif %}
-    {% endif %}
 </div>
 
 
