--- a/catalog/view/theme/d_visualize/template/checkout/register.twig
+++ b/catalog/view/theme/d_visualize/template/checkout/register.twig
@@ -1,4 +1,5 @@
 <div class="row">
+    {% set error_then = true %}
     <div class="col-sm-6">
         <fieldset id="account">
             <legend>{{ text_your_details }}</legend>
@@ -82,6 +83,12 @@
                 </div>
             </div>
         {% else %}
+            {% include partial.d_button_continue.template with partial.d_button_continue|merge({
+                back:continue,
+                button_back:button_shopping,
+                continue: checkout,
+                button_continue: button_checkout,
+            })%}
             <div class="buttons clearfix">
                 <div class="pull-right">
                     <input type="button" value="{{ button_continue }}" id="button-register"
@@ -90,174 +97,7 @@
             </div>
         {% endif %}
     </div>
+    {% set error_then = false %}
 
 </div>
 
-
-<script type="text/javascript"><!--
-	// Sort the custom fields
-	$('#account .form-group[data-sort]').detach().each(function () {
-		if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#account .form-group').length) {
-			$('#account .form-group').eq($(this).attr('data-sort')).before(this);
-		}
-
-		if ($(this).attr('data-sort') > $('#account .form-group').length) {
-			$('#account .form-group:last').after(this);
-		}
-
-		if ($(this).attr('data-sort') < -$('#account .form-group').length) {
-			$('#account .form-group:first').before(this);
-		}
-	});
-
-	$('#address .form-group[data-sort]').detach().each(function () {
-		if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#address .form-group').length) {
-			$('#address .form-group').eq($(this).attr('data-sort')).before(this);
-		}
-
-		if ($(this).attr('data-sort') > $('#address .form-group').length) {
-			$('#address .form-group:last').after(this);
-		}
-
-		if ($(this).attr('data-sort') < -$('#address .form-group').length) {
-			$('#address .form-group:first').before(this);
-		}
-	});
-
-	$('#collapse-payment-address input[name=\'customer_group_id\']').on('change', function () {
-		$.ajax({
-			url: 'index.php?route=checkout/checkout/customfield&customer_group_id=' + this.value,
-			dataType: 'json',
-			success: function (json) {
-				$('#collapse-payment-address .custom-field').hide();
-				$('#collapse-payment-address .custom-field').removeClass('required');
-
-				for (i = 0; i < json.length; i++) {
-					custom_field = json[i];
-
-					$('#payment-custom-field' + custom_field['custom_field_id']).show();
-
-					if (custom_field['required']) {
-						$('#payment-custom-field' + custom_field['custom_field_id']).addClass('required');
-					}
-				}
-			},
-			error: function (xhr, ajaxOptions, thrownError) {
-				alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-			}
-		});
-	});
-
-	$('#collapse-payment-address input[name=\'customer_group_id\']:checked').trigger('change');
-	//--></script>
-<script type="text/javascript"><!--
-	$('#collapse-payment-address button[id^=\'button-payment-custom-field\']').on('click', function () {
-		var node = this;
-
-		$('#form-upload').remove();
-
-		$('body').prepend('<form enctype="multipart/form-data" id="form-upload" style="display: none;"><input type="file" name="file" /></form>');
-
-		$('#form-upload input[name=\'file\']').trigger('click');
-
-		if (typeof timer != 'undefined') {
-			clearInterval(timer);
-		}
-
-		timer = setInterval(function () {
-			if ($('#form-upload input[name=\'file\']').val() != '') {
-				clearInterval(timer);
-
-				$.ajax({
-					url: 'index.php?route=tool/upload',
-					type: 'post',
-					dataType: 'json',
-					data: new FormData($('#form-upload')[0]),
-					cache: false,
-					contentType: false,
-					processData: false,
-					beforeSend: function () {
-						$(node).button('loading');
-					},
-					complete: function () {
-						$(node).button('reset');
-					},
-					success: function (json) {
-						$('.text-danger').remove();
-
-						if (json['error']) {
-							$(node).parent().find('input[name^=\'custom_field\']').after('<div class="text-danger">' + json['error'] + '</div>');
-						}
-
-						if (json['success']) {
-							alert(json['success']);
-
-							$(node).parent().find('input[name^=\'custom_field\']').attr('value', json['code']);
-						}
-					},
-					error: function (xhr, ajaxOptions, thrownError) {
-						alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-					}
-				});
-			}
-		}, 500);
-	});
-	//--></script>
-<script type="text/javascript"><!--
-	$('.date').datetimepicker({
-		pickTime: false
-	});
-
-	$('.time').datetimepicker({
-		pickDate: false
-	});
-
-	$('.datetime').datetimepicker({
-		pickDate: true,
-		pickTime: true
-	});
-	//--></script>
-<script type="text/javascript"><!--
-	$('#collapse-payment-address select[name=\'country_id\']').on('change', function () {
-		$.ajax({
-			url: 'index.php?route=checkout/checkout/country&country_id=' + this.value,
-			dataType: 'json',
-			beforeSend: function () {
-				$('#collapse-payment-address select[name=\'country_id\']').after(' <i class="fa fa-circle-o-notch fa-spin"></i>');
-			},
-			complete: function () {
-				$('.fa-spin').remove();
-			},
-			success: function (json) {
-				if (json['postcode_required'] == '1') {
-					$('#collapse-payment-address input[name=\'postcode\']').parent().parent().addClass('required');
-				} else {
-					$('#collapse-payment-address input[name=\'postcode\']').parent().parent().removeClass('required');
-				}
-
-				html = '<option value="">{{ text_select }}</option>';
-
-				if (json['zone'] && json['zone'] != '') {
-					for (i = 0; i < json['zone'].length; i++) {
-						html += '<option value="' + json['zone'][i]['zone_id'] + '"';
-
-						if (json['zone'][i]['zone_id'] == '{{ zone_id }}') {
-							html += ' selected="selected"';
-						}
-
-						html += '>' + json['zone'][i]['name'] + '</option>';
-					}
-				} else {
-					html += '<option value="0" selected="selected">{{ text_none }}; ?></option>';
-				}
-
-				$('#collapse-payment-address select[name=\'zone_id\']').html(html);
-			},
-			error: function (xhr, ajaxOptions, thrownError) {
-				alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-			}
-		});
-	});
-
-	$('#collapse-payment-address select[name=\'country_id\']').trigger('change');
-	//--></script>
