--- a/catalog/view/theme/d_visualize/template/component/input/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/input/default.twig
@@ -11,7 +11,7 @@
 {% if not type %}
     {% set type = 'text' %}
 {% endif %}
-<div class="vz-input vz-input_{{ type }} {% if size %} vz-input_{{ size }} {% endif %}">
+<div class="vz-input vz-input--{{ type }} {% if size %} vz-input--{{ size }} {% endif %}">
 {% if type == 'checkbox' %}
     <label class="vz-input__label">
         <input type="{{ type }}"
@@ -44,7 +44,7 @@
     {% endif %}
 {% elseif type=='radio' %}
     <label class="vz-input__label" id="{{ id }}">
-        <input type="vz-input__input"
+        <input type="radio"
                id="{{ id }}"
                class="{{ classes }} "
                name="{{ name }}"
