--- a/catalog/view/theme/d_visualize/template/component/product_product/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/product_product/default.twig
@@ -16,102 +16,130 @@
             {% endif %}
             <div class="{{ class }}">
                 <div class="btn-group">
-                    <button type="button" data-toggle="tooltip" class="btn btn-default" title="{{ button_wishlist }}"
-                            onclick="wishlist.add('{{ product_id }}');"><i class="fa fa-heart"></i></button>
-                    <button type="button" data-toggle="tooltip" class="btn btn-default" title="{{ button_compare }}"
-                            onclick="compare.add('{{ product_id }}');"><i class="fa fa-exchange"></i></button>
+                    {% include partial.button.template with partial.button|merge({
+                        button:'whishlist.add('~ product_id ~')',
+                        style:'default',
+                        icon:'fas fa-heart',
+                        title_button: button_wishlist,
+                        custom:'data-toggle="tooltip"'
+                    }) %}
+                    {% include partial.button.template with partial.button|merge({
+                        button:'compare.add('~ product_id ~')',
+                        style:'default',
+                        icon:'fas fa-exchange-alt',
+                        title_button: button_compare,
+                        custom:'data-toggle="tooltip"'
+                    }) %}
                 </div>
-                <h1>{{ heading_title }}</h1>
+                <h1 class="vz-product-product__heading heading-h1">{{ heading_title }}</h1>
                 <ul class="list-unstyled">
                     {% if manufacturer %}
-                        <li>{{ text_manufacturer }} <a href="{{ manufacturers }}">{{ manufacturer }}</a></li>
+                        <li class="vz-product-product__manufacturer">{{ text_manufacturer }} <a href="{{ manufacturers }}">{{ manufacturer }}</a></li>
                     {% endif %}
-                    <li>{{ text_model }} {{ model }}</li>
+                    <li class="vz-product-product__model">{{ text_model }} {{ model }}</li>
                     {% if reward %}
-                        <li>{{ text_reward }} {{ reward }}</li>
+                        <li class="vz-product-product__reward">{{ text_reward }} {{ reward }}</li>
                     {% endif %}
-                    <li>{{ text_stock }} {{ stock }}</li>
+                    <li class="vz-product-product__stock">{{ text_stock }} {{ stock }}</li>
                 </ul>
+
                 {% if price %}
-                    <ul class="list-unstyled">
-                        {% if not special %}
-                            <li>
-                                <h2>{{ price }}</h2>
-                            </li>
-                        {% else %}
-                            <li><span style="text-decoration: line-through;">{{ price }}</span></li>
-                            <li>
-                                <h2>{{ special }}</h2>
-                            </li>
-                        {% endif %}
-                        {% if tax %}
-                            <li>{{ text_tax }} {{ tax }}</li>
-                        {% endif %}
-                        {% if points %}
-                            <li>{{ text_points }} {{ points }}</li>
-                        {% endif %}
-                        {% if discounts %}
-                            <li>
-                                <hr>
-                            </li>
-                            {% for discount in discounts %}
-                                <li>{{ discount.quantity }}{{ text_discount }}{{ discount.price }}</li>
-                            {% endfor %}
-                        {% endif %}
-                    </ul>
+                    <div >
+                        <ul class="list-unstyled">
+                            {% if not special %}
+                                <li class="vz-product-product__price">
+                                    <h2>{{ price }}</h2>
+                                </li>
+                            {% else %}
+                                <li class="vz-product-product__price"><span style="text-decoration: line-through;">{{ price }}</span></li>
+                                <li class="vz-product-product__price vz-product-product__price--special">
+                                    <h2>{{ special }}</h2>
+                                </li>
+                            {% endif %}
+                            {% if tax %}
+                                <li class="vz-product-product__tax">{{ text_tax }} {{ tax }}</li>
+                            {% endif %}
+                            {% if points %}
+                                <li class="vz-product-product__points">{{ text_points }} {{ points }}</li>
+                            {% endif %}
+                            {% if discounts %}
+                                <li >
+                                    <hr>
+                                </li>
+                                {% for discount in discounts %}
+                                    <li class="vz-product-product__discount">{{ discount.quantity }}{{ text_discount }}{{ discount.price }}</li>
+                                {% endfor %}
+                            {% endif %}
+                        </ul>
+                    </div>
                 {% endif %}
                 <div id="product">
                     {% include component.product_options.template %}
                     {% if recurrings %}
-                        <hr>
-                        <h3>{{ text_payment_recurring }}</h3>
-                        <div class="form-group required">
-                            <select name="recurring_id" class="form-control">
-                                <option value="">{{ text_select }}</option>
-                                {% for recurring in recurrings %}
-                                    <option value="{{ recurring.recurring_id }}">{{ recurring.name }}</option>
-                                {% endfor %}
-                            </select>
+                        <div class="vz-product_product__recurring">
+                            <hr>
+                            <h3>{{ text_payment_recurring }}</h3>
+                            {% include partial.form_group.template with partial.form_group|merge({
+                                type:'select',
+                                name:'recurring_id',
+                                required: true,
+                                select_values:recurrings,
+                                select_values_val:'recurring_id',
+                                select_values_check: '',
+                                select_values_name: 'name',
+                            }) %}
                             <div class="help-block" id="recurring-description"></div>
+                            {#maybe bug with this block#}
+                            {#<div class="form-group required">#}
+                                {#<select name="recurring_id" class="form-control">#}
+                                    {#<option value="">{{ text_select }}</option>#}
+                                    {#{% for recurring in recurrings %}#}
+                                        {#<option value="{{ recurring.recurring_id }}">{{ recurring.name }}</option>#}
+                                    {#{% endfor %}#}
+                                {#</select>#}
+                                {#<div class="help-block" id="recurring-description"></div>#}
+                            {#</div>#}
                         </div>
                     {% endif %}
-                    <div class="form-group">
-                        <label class="control-label" for="input-quantity">{{ entry_qty }}</label>
-                        <input type="text" name="quantity" value="{{ minimum }}" size="2" id="input-quantity"
-                               class="form-control"/>
-                        <input type="hidden" name="product_id" value="{{ product_id }}"/>
-                        <br/>
-                        <button type="button" id="button-cart" data-loading-text="{{ text_loading }}"
-                                class="btn btn-primary btn-lg btn-block">{{ button_cart }}</button>
-                    </div>
+                    {% include partial.form_group.template with partial.form_group|merge({
+                        type:'text',
+                        id:'input-quantity',
+                        name:'quantity',
+                        value:minimum,
+                        text_input:entry_qty
+                    }) %}
+                    <input type="hidden" name="product_id" value="{{ product_id }}"/>
+
+                    {% include partial.button.template with partial.button|merge({
+                        button:button_cart,
+                        id:'button-cart',
+                        text_loading:text_loading,
+                        style:'primary',
+                        size:'lg',
+                        classes:'btn-block',
+                        text_button:button_cart
+                    }) %}
+
                     {% if minimum > 1 %}
                         <div class="alert alert-info"><i class="fa fa-info-circle"></i> {{ text_minimum }}</div>
                     {% endif %}</div>
                 {% if review_status %}
                     {% include partial.d_rating.template with partial.d_rating|merge({
-                        static_rating:true
+                        static_rating:true,
                     }) %}
-                    {#<div class="rating">#}
-                        {#<p>{% for i in 1..5 %}#}
-                                {#{% if rating < i %}<span class="fa fa-stack"><i#}
-                                            {#class="fa fa-star-o fa-stack-1x"></i></span>{% else %}<span#}
-                                        {#class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i#}
-                                            {#class="fa fa-star-o fa-stack-1x"></i></span>{% endif %}#}
-                            {#{% endfor %} <a href=""#}
-                                            {#onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ reviews }}</a>#}
-                            {#/ <a href=""#}
-                                 {#onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ text_write }}</a>#}
-                        {#</p>#}
-                        {#<hr>#}
-                        {#<!-- AddThis Button BEGIN -->#}
-                        {#<div class="addthis_toolbox addthis_default_style" data-url="{{ share }}"><a#}
-                                    {#class="addthis_button_facebook_like" fb:like:layout="button_count"></a> <a#}
-                                    {#class="addthis_button_tweet"></a> <a class="addthis_button_pinterest_pinit"></a> <a#}
-                                    {#class="addthis_counter addthis_pill_style"></a></div>#}
-                        {#<script type="text/javascript"#}
-                                {#src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-515eeaf54693130e"></script>#}
-                        {#<!-- AddThis Button END -->#}
-                    {#</div>#}
+                    <a href=""
+                       onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ reviews }}</a>
+                    / <a href=""
+                         onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;">{{ text_write }}</a>
+                        <hr>
+                        <!-- AddThis Button BEGIN -->
+                        <div class="addthis_toolbox addthis_default_style" data-url="{{ share }}"><a
+                                    class="addthis_button_facebook_like" fb:like:layout="button_count"></a> <a
+                                    class="addthis_button_tweet"></a> <a class="addthis_button_pinterest_pinit"></a> <a
+                                    class="addthis_counter addthis_pill_style"></a></div>
+                        <script type="text/javascript"
+                                src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-515eeaf54693130e"></script>
+                        <!-- AddThis Button END -->
                 {% endif %} </div>
         </div>
         {% if products %}
@@ -139,7 +167,7 @@
                 {% endfor %} </div>
         {% endif %}
         {% if tags %}
-            <p>{{ text_tags }}
+            <p class="vz-product-product__tags">{{ text_tags }}
                 {% for i in 0..tags|length %}
                     {% if i < (tags|length - 1) %} <a href="{{ tags[i].href }}">{{ tags[i].tag }}</a>,
                     {% else %} <a href="{{ tags[i].href }}">{{ tags[i].tag }}</a> {% endif %}
